@startuml Hermes Deployment Services

' ---------------- Modelos principales ----------------

class Server {
    +id: AutoField
    +name: CharField(255)
    +ip: CharField(63)
    +email: EmailField
    +region: CharField(100)
    +project: CharField(255)
}

class Repo {
    +id: AutoField
    +name: CharField(255)
    +url: URLField
}

class Image {
    +id: AutoField
    +name: CharField(255)
    +url: URLField
    +branch: CharField(255)
    +version: CharField(63)
}

class App {
    +id: AutoField
    +name: CharField(255)
    +domain: CharField(255)
    +branch: CharField(255)
}

class Env {
    +id: AutoField
    +name: CharField(255)
}

class EnvVar {
    +id: AutoField
    +name: CharField(255)
    +value: TextField
}

' ---------------- Relaciones ----------------

' Un Server puede alojar varias Apps
Server "1" -- "*" App : hosts

' Un Repo puede estar asociado a varias Apps
Repo "1" -- "*" App : source

' Un Repo puede tener varias Images
Repo "1" -- "*" Image : builds

' Una App puede tener varios Env (.env, prod, etc.)
App "1" -- "*" Env : has

' Cada Env tiene muchas EnvVar
Env "1" -- "*" EnvVar : contains

@enduml
